Fixed thumb creating for path with spaces